--- a/simple-todos__1/package.json
+++ b/simple-todos__1/package.json
@@ -8,7 +8,8 @@
     "visualize": "meteor --production --extra-packages bundle-visualizer"
   },
   "dependencies": {
-    "@babel/runtime": "^7.0.0-beta.55",
+    "@babel/runtime": "^7.2.0",
+    "bcrypt": "^3.0.3",
     "meteor-node-stubs": "^0.4.1"
   },
   "meteor": {
